--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories {
+        maven {
+            url "https://repo.eclipse.org/content/repositories/paho-releases/"
+        }
+    }
 }
 
 dependencies {
@@ -28,11 +34,20 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:localbroadcastmanager:28.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+
+
+    compile('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') {
+        exclude module: 'support-v4'
+    }
+
 
     implementation 'androidx.cardview:cardview:1.0.0'
 
 }
-
 
 
 apply plugin: 'com.google.gms.google-services'
